@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#4074] Require list permission on Context for Resource searches
 - [#4439] Do not allow invalid characters in username / password
 - [#4485] Fix issue with scrolling on drag/drop Element Properties window in small resolutions
 - [#4352] Fix failedlogincount / user blocking logic in login processor
